# SunLitSecurityLibraries

./: .dockerignore  .gitignore  .semgrepignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  THREAT_MODEL.md  TRADEMARKS.md  deny.toml  findings.json  findings.osv.json  osv-scanner.toml  sca-scope.json
crates/secure_authz/: Cargo.toml  README.md
crates/secure_authz/examples/: actix_authz_minimal.rs  route_coverage.rs
crates/secure_authz/src/: abac.rs  action.rs  cache.rs  decision.rs  decision_log.rs  device_trust.rs  enforce.rs  enforcer.rs  lib.rs  middleware.rs  ownership.rs  policy.rs  proofs.rs  resolver.rs  resource.rs  subject.rs  temporal.rs  testing.rs  testkit.rs
crates/secure_authz/tests/: e2e_sunlit_imp_m15.rs  e2e_sunlit_m6.rs  e2e_sunlit_ndt_m4.rs  e2e_sunlit_owasp_m23.rs  prop_deny_default.rs  sg_gate_a_actix_authz.rs  sg_gate_a_parity_authz.rs  sg_gate_a_policy_coverage.rs  sunlit_authz_cache.rs  sunlit_authz_deny_default.rs  sunlit_authz_ownership.rs  sunlit_authz_policies.rs  sunlit_authz_tenant.rs  sunlit_imp_authz_cache_tenant.rs  sunlit_imp_authz_obligations.rs  sunlit_owasp_abac.rs  sunlit_owasp_temporal.rs
crates/secure_boundary/: Cargo.toml  README.md
crates/secure_boundary/examples/: actix_minimal.rs
crates/secure_boundary/fuzz/: Cargo.toml
crates/secure_boundary/src/: attack_signal.rs  content_type.rs  cors.rs  dto.rs  error.rs  extract.rs  fetch_metadata.rs  header_sanitize.rs  headers.rs  id.rs  lib.rs  limits.rs  normalize.rs  platform.rs  prompt_boundary.rs  proofs.rs  safe_types.rs  sanitize.rs  serde.rs  validate.rs  xml.rs
crates/secure_boundary/tests/: cve_maswe_0058_deep_links.rs  cve_maswe_0069_webview_files.rs  cve_regression.rs  e2e_sunlit_imp_m11.rs  e2e_sunlit_m4.rs  e2e_sunlit_owasp_m18.rs  e2e_sunlit_owasp_m21.rs  platform_tests.rs  prompt_boundary.rs  prop_deep_link_webview.rs  prop_validation.rs  sg_gate_a_actix_extract.rs  sg_gate_a_actix_fetch_metadata.rs  sg_gate_a_actix_headers.rs  sg_gate_a_parity_boundary.rs  sg_gate_a_safeurl_cidrs.rs  sunlit_boundary_extractors.rs  sunlit_boundary_headers.rs  sunlit_boundary_mass_assignment.rs  sunlit_boundary_normalization.rs  sunlit_boundary_strict_serde.rs  sunlit_boundary_validation.rs  sunlit_imp_depth_limits.rs  sunlit_imp_header_sanitize.rs  sunlit_imp_headers.rs  sunlit_imp_safe_types.rs  sunlit_imp_xml.rs  sunlit_owasp_cors.rs  sunlit_owasp_fetch_meta.rs  sunlit_owasp_limits.rs  sunlit_owasp_sanitize.rs
crates/secure_data/: Cargo.toml  README.md
crates/secure_data/fuzz/: Cargo.toml
crates/secure_data/src/: algorithm.rs  config.rs  envelope.rs  error.rs  key_vault.rs  keyring.rs  kms.rs  lib.rs  memory.rs  mobile_storage.rs  password.rs  proofs.rs  resolve.rs  rotation.rs  secret.rs  serde.rs
crates/secure_data/tests/: e2e_sunlit_imp_m13.rs  e2e_sunlit_m7.rs  e2e_sunlit_masvs_m2.rs  e2e_sunlit_owasp_m20.rs  e2e_sunlit_owasp_m25.rs  mobile_storage_tests.rs  pqd_m1_envelope_versioning.rs  pqd_m2_hybrid_kem.rs  pqd_m3_compat_matrix.rs  prop_encryption.rs  sunlit_data_envelope.rs  sunlit_data_leakage.rs  sunlit_data_rotation.rs  sunlit_data_secrets.rs  sunlit_imp_aws_kms.rs  sunlit_imp_resolve.rs  sunlit_imp_vault.rs  sunlit_owasp_agility.rs  sunlit_owasp_keyvault.rs  sunlit_owasp_password.rs  timing_crypto.rs
crates/secure_device_trust/: Cargo.toml  README.md
crates/secure_device_trust/src/: lib.rs  session.rs
crates/secure_device_trust/tests/: e2e_sunlit_ndt_m1.rs  e2e_sunlit_ndt_m2.rs
crates/secure_errors/: Cargo.toml  README.md
crates/secure_errors/examples/: actix_error_minimal.rs
crates/secure_errors/src/: actix.rs  capture.rs  classify.rs  context_propagation.rs  http.rs  incident.rs  kind.rs  lib.rs  middleware.rs  panic.rs  proofs.rs  public.rs  report.rs
crates/secure_errors/tests/: e2e_sunlit_imp_m15.rs  e2e_sunlit_m2.rs  sg_gate_a_actix_errors.rs  sg_gate_a_parity_errors.rs  sunlit_errors_leakage.rs  sunlit_errors_mapping.rs  sunlit_errors_panic.rs  sunlit_imp_error_mapping.rs
crates/secure_identity/: Cargo.toml  README.md
crates/secure_identity/examples/: production_boot.rs
crates/secure_identity/fuzz/: Cargo.toml
crates/secure_identity/src/: api_key.rs  auth_events.rs  authenticator.rs  biometric.rs  boot.rs  dev.rs  device_binding.rs  error.rs  jwks.rs  lib.rs  mfa.rs  oidc.rs  passwordless.rs  session.rs  session_redis.rs  step_up.rs  token.rs  totp.rs
crates/secure_identity/tests/: biometric_tests.rs  cve_regression.rs  e2e_sunlit_imp_m14.rs  e2e_sunlit_m5.rs  e2e_sunlit_ndt_m3.rs  e2e_sunlit_owasp_m24.rs  prop_session.rs  sg_gate_a_boot_assert.rs  step_up_tests.rs  sunlit_identity_authenticator.rs  sunlit_identity_dev.rs  sunlit_identity_session.rs  sunlit_identity_token.rs  sunlit_imp_api_key.rs  sunlit_imp_asymmetric_jwt.rs  sunlit_imp_jwks.rs  sunlit_owasp_oidc.rs  sunlit_owasp_sessions.rs  sunlit_owasp_totp.rs  timing_token_compare.rs
crates/secure_network/: Cargo.toml  README.md
crates/secure_network/fuzz/: Cargo.toml
crates/secure_network/src/: cert_pin.rs  cleartext.rs  error.rs  lib.rs  mtls.rs  tls_policy.rs
crates/secure_network/tests/: cert_pin_tests.rs  cleartext_tests.rs  cve_maswe_0050_cleartext.rs  cve_maswe_0052_cert_validation.rs  e2e_sunlit_masvs_m1.rs  mtls_identity_tests.rs  prop_tls_cleartext.rs  tls_policy_tests.rs
crates/secure_output/: Cargo.toml  README.md
crates/secure_output/fuzz/: Cargo.toml
crates/secure_output/src/: css.rs  encode.rs  html.rs  js.rs  json.rs  ldap.rs  lib.rs  shell.rs  uri.rs  url.rs  xml.rs
crates/secure_output/tests/: e2e_sunlit_imp_m12.rs  e2e_sunlit_m4_output.rs  e2e_sunlit_owasp_m19.rs  prop_encoding.rs  (+7 more)
crates/secure_privacy/: Cargo.toml  README.md
crates/secure_reference_service/: Cargo.toml  README.md
crates/secure_resilience/: Cargo.toml  README.md
crates/secure_smoke_service/: Cargo.toml  README.md  openapi.yaml
crates/security_core/: Cargo.toml  README.md
crates/security_events/: Cargo.toml  README.md
(+386 files in other folders)
