[workspace]
resolver = "2"
members = [
    "crates/security_core",
    "crates/secure_errors",
    "crates/security_events",
    "crates/secure_boundary",
    "crates/secure_authz",
    "crates/secure_data",
    "crates/secure_output",
    "crates/secure_identity",
    "crates/secure_device_trust",
    "crates/secure_reference_service",
    "crates/secure_smoke_service",
    "crates/secure_network",
    "crates/secure_resilience",
    "crates/secure_privacy",
]

# Dependency convention for this workspace:
#
#   * Every internal crate is declared here once, with its `path` and the
#     `version` it publishes at, so members reference it as
#     `name = { workspace = true }` and there is a single source of truth for
#     the published version. (The two `publish = false` service crates are not
#     listed because nothing depends on them.)
#   * Third-party crates are centralised here only when 3+ members use them
#     with a uniform spec (serde, uuid, time). Everything else — including
#     `tokio`, whose feature surface is intentionally minimised per crate — is
#     declared at the crate that uses it.
[workspace.dependencies]
# Internal crates (single source of truth for published versions).
security_core = { path = "crates/security_core", version = "0.1.2" }
secure_errors = { path = "crates/secure_errors", version = "0.1.2" }
security_events = { path = "crates/security_events", version = "0.1.2" }
secure_boundary = { path = "crates/secure_boundary", version = "0.1.3" }
secure_authz = { path = "crates/secure_authz", version = "0.1.2" }
secure_data = { path = "crates/secure_data", version = "0.1.2" }
secure_output = { path = "crates/secure_output", version = "0.1.2" }
secure_identity = { path = "crates/secure_identity", version = "0.1.2" }
secure_device_trust = { path = "crates/secure_device_trust", version = "0.1.2" }
secure_network = { path = "crates/secure_network", version = "0.1.2" }
secure_resilience = { path = "crates/secure_resilience", version = "0.1.2" }
secure_privacy = { path = "crates/secure_privacy", version = "0.1.2" }

# Third-party crates shared with a uniform spec across 3+ members.
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
