[package]
name = "sunlit_secure_boundary"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Input validation, request limits, CORS, Fetch Metadata, and browser boundary protections."
repository = "https://github.com/kerberosmansour/SunLitSecurityLibraries"
documentation = "https://docs.rs/sunlit_secure_boundary"
keywords = ["security", "validation", "headers", "axum", "actix"]

[lib]
name = "secure_boundary"

[features]
default = ["axum"]
axum = ["dep:axum", "dep:axum-core", "dep:tower", "dep:tower-http", "dep:http-body-util"]
actix-web = ["dep:actix-web", "dep:actix-http", "dep:futures-util"]
html-sanitize = ["dep:ammonia"]
mobile-platform = []

[dependencies]
security_core = { package = "sunlit_security_core", version = "0.1.0", path = "../security_core" }
secure_errors = { package = "sunlit_secure_errors", version = "0.1.0", path = "../secure_errors" }
security_events = { package = "sunlit_security_events", version = "0.1.0", path = "../security_events" }
axum = { version = "0.8", optional = true }
axum-core = { version = "0.5", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["set-header", "cors"], optional = true }
http-body-util = { version = "0.1", optional = true }
actix-web = { version = "4", optional = true }
actix-http = { version = "3", optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
serde_json = "1"
serde_urlencoded = "0.7"
unicode-normalization = "0.1"
mime = "0.3"
bytes = "1"
http = "1"
uuid = { workspace = true, features = ["v4", "serde"] }
quick-xml = { version = "0.39", features = ["serialize"] }
thiserror = "2"
time = { workspace = true }
tokio = { workspace = true }
ammonia = { version = "4", optional = true }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
actix-web = { version = "4" }
serde_json = "1"
secure_output = { package = "sunlit_secure_output", version = "0.1.0", path = "../secure_output" }
tokio = { workspace = true, features = ["full"] }
proptest = "1"

[[example]]
name = "actix_minimal"
required-features = ["actix-web"]
