[package]
name = "secure_boundary"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Input validation, request limits, CORS, Fetch Metadata, and browser boundary protections."
readme = "README.md"
repository = "https://github.com/kerberosmansour/SunLitSecurityLibraries"
documentation = "https://docs.rs/secure_boundary"
keywords = ["security", "validation", "headers", "axum", "actix"]

[lib]
name = "secure_boundary"

# Recognise the `cfg(kani)` flag set by `cargo kani` so the proof module
# does not trigger an `unexpected_cfgs` warning on regular builds.
# See `crates/secure_boundary/src/proofs.rs` and `.github/workflows/kani.yml`.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = ["axum"]
axum = ["dep:axum", "dep:axum-core", "dep:tower", "dep:tower-http", "dep:http-body-util"]
actix-web = ["dep:actix-web", "dep:actix-http", "dep:futures-util"]
html-sanitize = ["dep:ammonia"]
mobile-platform = []

[dependencies]
security_core = { workspace = true }
secure_errors = { workspace = true }
security_events = { workspace = true }
axum = { version = "0.8", optional = true }
axum-core = { version = "0.5", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["set-header", "cors"], optional = true }
http-body-util = { version = "0.1", optional = true }
actix-web = { version = "4", optional = true }
actix-http = { version = "3", optional = true }
futures-util = { version = "0.3", optional = true }
serde = { workspace = true }
base64 = "0.22"
serde_json = "1"
serde_urlencoded = "0.7"
unicode-normalization = "0.1"
mime = "0.3"
bytes = "1"
http = "1"
uuid = { workspace = true }
quick-xml = { version = "0.40", features = ["serialize"] }
thiserror = "2"
time = { workspace = true }
tokio = { version = "1", features = ["full"] }
ammonia = { version = "4", optional = true }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
actix-web = { version = "4" }
serde_json = "1"
secure_output = { workspace = true }
tokio = { version = "1", features = ["full"] }
proptest = "1"

[[example]]
name = "actix_minimal"
required-features = ["actix-web"]
