[package]
name = "secure_network"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "TLS policy validation, SPKI certificate pinning, and cleartext traffic detection."
readme = "README.md"
repository = "https://github.com/kerberosmansour/SunLitSecurityLibraries"
documentation = "https://docs.rs/secure_network"
keywords = ["security", "tls", "pinning", "network"]

[lib]
name = "secure_network"

[dependencies]
security_core = { workspace = true }
security_events = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
x509-parser = "0.16"
time = { workspace = true }

[dev-dependencies]
serde_json = "1"
time = { workspace = true }
proptest = "1"
