[package]
name = "secure_privacy"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Privacy controls for classification, consent, retention, pseudonymization, and redaction."
readme = "README.md"
repository = "https://github.com/kerberosmansour/SunLitSecurityLibraries"
documentation = "https://docs.rs/secure_privacy"
keywords = ["security", "privacy", "pii", "redaction"]

[lib]
name = "secure_privacy"

[dependencies]
security_core = { workspace = true }
security_events = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
regex = "1"
time = { workspace = true }

[dev-dependencies]
serde_json = "1"
proptest = "1"
