[package]
name = "secure_reference_service"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Reference service demonstrating SunLit secure middleware composition."
readme = "README.md"
repository = "https://github.com/kerberosmansour/SunLitSecurityLibraries"
publish = false

[[bin]]
name = "secure_reference_service"
path = "src/main.rs"

[lib]
name = "secure_reference_service"
path = "src/lib.rs"

[dependencies]
# Workspace library crates
security_core = { workspace = true }
secure_errors = { workspace = true }
security_events = { workspace = true }
secure_boundary = { workspace = true }
secure_output = { workspace = true }
secure_identity = { workspace = true }
secure_authz = { workspace = true }
secure_data = { workspace = true }

# Axum / Tower / Tokio
axum = "0.8"
axum-core = "0.5"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["request-id", "timeout", "catch-panic", "trace"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Serialisation
serde = { workspace = true }
serde_json = "1"

# Utilities
uuid = { workspace = true }
time = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1"
thiserror = "2"

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
secure_device_trust = { workspace = true }
secure_network = { workspace = true }
secure_identity = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
