[package]
name = "sunlit_secure_resilience"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Security resilience helpers for environment checks, integrity signals, and timeout budgeting."
repository = "https://github.com/kerberosmansour/SunLitSecurityLibraries"
documentation = "https://docs.rs/sunlit_secure_resilience"
keywords = ["security", "resilience", "integrity", "runtime"]

[lib]
name = "secure_resilience"

[dependencies]
security_core = { package = "sunlit_security_core", version = "0.1.0", path = "../security_core" }
security_events = { package = "sunlit_security_events", version = "0.1.0", path = "../security_events" }
serde = { workspace = true }
sha2 = "0.11"
time = { workspace = true }

[dev-dependencies]
serde_json = "1"
proptest = "1"
