[package]
name = "secure_smoke_service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Smoke-test service used for DAST and security-route regression checks."
repository = "https://github.com/kerberosmansour/SunLitSecurityLibraries"
publish = false

[[bin]]
name = "secure_smoke_service"
path = "src/main.rs"

[lib]
name = "secure_smoke_service"
path = "src/lib.rs"

[dependencies]
# Workspace library crates
security_core = { package = "security_core", version = "0.1.0", path = "../security_core" }
secure_errors = { package = "secure_errors", version = "0.1.0", path = "../secure_errors" }
security_events = { package = "security_events", version = "0.1.0", path = "../security_events" }
secure_boundary = { package = "secure_boundary", version = "0.1.0", path = "../secure_boundary", features = ["mobile-platform"] }
# E2E tests exercise the Actix-web 4 adapters via a feature-flagged test
# harness; the axum smoke binary itself does not depend on actix-web at runtime.
secure_output = { package = "secure_output", version = "0.1.0", path = "../secure_output" }
secure_identity = { package = "secure_identity", version = "0.1.0", path = "../secure_identity", features = ["biometric"] }
secure_authz = { package = "secure_authz", version = "0.1.0", path = "../secure_authz" }
secure_data = { package = "secure_data", version = "0.1.0", path = "../secure_data", features = ["mobile-storage"] }
secure_network = { package = "secure_network", version = "0.1.0", path = "../secure_network" }
secure_resilience = { package = "secure_resilience", version = "0.1.0", path = "../secure_resilience" }
secure_privacy = { package = "secure_privacy", version = "0.1.0", path = "../secure_privacy" }

# Axum / Tower / Tokio
axum = "0.8"
axum-core = "0.5"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["request-id", "timeout", "catch-panic", "trace"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1"
thiserror = "2"

# JWT creation for tests
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22"
# For sg-gate-a M1 E2E tests against the Actix-web 4 adapters. The additional
# features are unified with the `[dependencies]` entry so the test target
# sees both the existing axum integration and the Actix adapters.
secure_boundary = { package = "secure_boundary", version = "0.1.0", path = "../secure_boundary", features = ["actix-web"] }
secure_authz = { package = "secure_authz", version = "0.1.0", path = "../secure_authz", features = ["actix-web"] }
secure_errors = { package = "secure_errors", version = "0.1.0", path = "../secure_errors", features = ["actix-web"] }
actix-web = "4"
